Specify --add-opens for each module individually